--- a/LinMHelper/Main.ini
+++ b/LinMHelper/Main.ini
@@ -1,12 +1,12 @@
 [Player0]
 windowname = NoxPlayer
-profilename = 1_妖精消極洗魔.ini
-enabled = 0
+profilename = 1_法師留魔.ini
+enabled = 1
 
 [Player1]
 windowname = scdPlayer
 profilename = 2_法師留魔.ini
-enabled = 0
+enabled = 1
 
 [Player2]
 windowname = aaa
