--- a/LinMHelper/Main.ini
+++ b/LinMHelper/Main.ini
@@ -1,20 +1,27 @@
 [Player0]
-windowname = NoxPlayer
-profilename = 1_法師留魔.ini
+windowname = wsh9
+profilename = 妖精.ini
 enabled = 1
 
 [Player1]
 windowname = scdPlayer
-profilename = 2_法師留魔.ini
-enabled = 1
+profilename = 騎士.ini
+enabled = 0
 
 [Player2]
-windowname = aaa
-profilename = default.ini
-enabled = 0
+windowname = rtc9
+profilename = 法師.ini
+enabled = 1
 
 [Player3]
-windowname = bbbcc
-profilename = default.ini
-enabled = 0
+windowname = ge9
+profilename = 騎士.ini
+enabled = 1
+
+[Emulator]
+noxpath = D:\Nox\bin
+noxconsole = NoxConsole.exe
+noxadb = nox_adb.exe
+basewidth = 1280
+baseheight = 720
 
